chore: add tweak

--- a/articles/c44060e9e35f50.md
+++ b/articles/c44060e9e35f50.md
@@ -118,6 +118,7 @@ https://jsstudy.hatenablog.com/entry/How-to-set-a-shortcut-to-enter-the-current-
 - 今後の課題
     - フォーマットは自由入力にしてもいいかもしれない
     - 今時点で使わなさそうなコマンドもあるし、もっと欲しいコマンドがありそう
+        - 次のHoge曜日は全部あってもいいかもしれない
     - 使ってみて欲しい便利コマンドがあれば追加していく
 
 リポジトリはこちらですので、何か不具合や改善点があれば、Issue や Pull Request などお気軽にお寄せください。
