--- a/articles/e4b3a5458e0055.md
+++ b/articles/e4b3a5458e0055.md
@@ -21,7 +21,7 @@ published: true
 
 などなど。
 
-今回はいくつかの書籍に出てきた、定義や「良いユニットテストとはなにか」ということをまとめつつ、自分なりの答えを探してみました。
+今回はいくつかの書籍に出てきた定義や「良いユニットテストとはなにか」ということをまとめつつ、自分なりの答えを探してみました。
 
 次回以降の記事で具体的なプラクティスについてもまとめていきたいと思います。
 
