fix: unit test def

--- a/articles/e4b3a5458e0055.md
+++ b/articles/e4b3a5458e0055.md
@@ -201,6 +201,7 @@ https://speakerdeck.com/twada/automated-test-knowledge-from-savanna-202305-editi
 
 - Controller や Model などの外部や外部依存へに接地する部分を含める
 - 実際のDBや外部の依存を少し含めるので、より「パスした時の安心感」が強い
+    - 完全にコントロールできない依存を除いて、コントロールできる依存はコンテナ技術などを使って信頼度を高める
 - ユニットテストほどではないがコンテナ技術などを使っているので、Pull Request時に実行しても遅くなりすぎない
     - 少なくとも　Controller をインジェクトしてリクエストを再現したり、モデルに対するテストは開発者が書く
     - 実際のNWを経由して、例えばPostmanなどでAPIを叩くテストはQAエンジニアと協力するかな
