fix: helper article

--- a/articles/0aeef3e7347793.md
+++ b/articles/0aeef3e7347793.md
@@ -1,9 +1,9 @@
 ---
-title: "beforeEachは便利だけど注意点もあります。サンプルを添えて。"
+title: "ユニットテストでbeforeEachなどのセットアップを使う際の注意点と改善例"
 emoji: "📝"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["test", "unittest"]
-published: false
+published: true
 ---
 
 皆さんはユニットテストを書かれていますか。私は書いています。
@@ -13,12 +13,14 @@ published: false
 - 共通の前処理は `before` や `beforeEach` に書くと同じことを繰り返さずに済むよ
 - 後処理も同様に `after` や `afterEach` に書くと良いよ
 
+参考: [jest](https://jestjs.io/ja/docs/setup-teardown)の例はこちら。
+
 確かにこれらのセットアップ関数などはとても便利なのですが、一方でいくつか留意した方が良いポイントを含んでいると思います。
 
 今回はサンプルコードを見つつ、以下のような内容についてお話したいと思います。
 
-- `beforeEach` などの共通処理を行うことの留意点
-- `beforeEach` にまとめないで良いと思う場合について（そして改善提案）
+- `beforeEach` などの共通処理を行う際の注意点
+- それに対する改善提案
 - 逆に `beforeEach` を使っても良いかなぁ。と思うケースについて
 
 ## サンプルコード
@@ -48,6 +50,7 @@ export class AwsServiceNameValidator {
   // Security Hub や Lambda は AWS から始まります。
   readonly prefixAws = new Set(["Security Hub", "Lambda"])
   //  Security Hub はスペースが入ります。逆にCloudFrontはスペースが入りません。
+  // 間違えやすいサービス名のセットです
   readonly invalidSpace = new Set(["SecurityHub", "Cloud Front"])
 
   constructor(prefix: string, serviceName: string) {
@@ -134,7 +137,7 @@ describe("AwsServiceNameValidator", () => {
 - 接頭辞が `Amazon` ではなく `AWS` となっていて正しい
 - `Security Hub` というようにちゃんと正しいスペースが入っている（`SecurityHub` ではない）
 
-しかし、プログラマーであれば以下の部分について同じような初期化を何度もしているのが気になるかもしれません。
+しかし、プログラマーであれば以下の部分について同じような初期化を何度もしているのが気になるかもしれません。（`AwsServiceNameValidator` が変更になった時の変更箇所も多いですよね）
 
 ```ts
       const awsServiceNameValidator = new AwsServiceNameValidator(
@@ -181,7 +184,7 @@ describe("AwsServiceNameValidator", () => {
 })
 ```
 
-一見するとスッキリしていて良さそうですが、このテストケースには以下のような点に気をつける必要があります。
+一見するとスッキリしていて良さそうですが、以下のような点に気をつける必要があります。
 
 - `awsServiceNameValidator` という変数をテストケースの間で共有している
   - 一方のテストケースの条件を変更したい場合、他方のテストケースに影響が出てしまう
@@ -190,25 +193,26 @@ describe("AwsServiceNameValidator", () => {
   - 2つのテストケースで確かめたかった関心事は全然別物のはず
     - サービスの接頭辞が正しいか
     - サービス名に正しい形でスペースが入っているか
-  - 確かに「同じコード」を使っていたけど、それは本当にDRYなのか
+  - 確かに「同じコード」を使っていたけど、それはまとめることがDRY原則と言えるのか
     - 参考: https://x.com/t_wada/status/1798569809745166616
 - スクロールしないと `beforeEach` がどのような初期化を行っているのかがわからない
   - 安易にセットアップ関数でまとめると、下の方のテストケースでは結構上にスクロールしないと `awsServiceNameValidator` がどのような初期化を行っているのかわからない
+  - さらにこれがネストしていると、どこで何をしているか非常にわかりにくい
     - 後でテストを追加したり変更する人でもぱっと見てわかりやすい方が良い
   - 以下の画像のような状態（今回は2つだけですが他にも沢山テストケースがあると、後のテストでは沢山スクロールしないと初期化の条件が見えない）
 
 ![上にスクロールしないと初期化の条件が見えない](/images/unittest-before/scroll-needed.jpg)
 
-良いユニットテストの条件には「テストケース間が独立していて、どんな順番で実行されても良い」というものがあると考えています。
+良いユニットテストの条件には「テストケース間が独立していて、どんな順番で実行されても問題ない」というものがあると考えています。
 
 セットアップ関数はとても便利な反面、ある種テストケース間で状態を共有してしまい、テストケース間の独立性を損なう可能性があると思います。
 
-ということで、次のようにテストを書いてみました。
+ということで、次のようにテストコードを変更してみます。
 
 ### Step3: ヘルパー関数を使ってみる
 
 ```ts
-// ヘルパー関数
+// ヘルパー関数(ファクトリー関数)
 // クラスに修正が入ってもここだけ直せばいいし、テストケースの中身が見やすい
 // 引数を省略してデフォルトの引数で初期化したインスタンスを返すのもよいかも
 const makeAwsServiceNameValidator = (
@@ -256,7 +260,10 @@ describe("AwsServiceNameValidator", () => {
 
 - `AwsServiceNameValidator` に変更が入っても `makeAwsServiceNameValidator` だけを修正すれば良い
 - `beforeEach` で共有していた状態をテストケース間で共有せずに済む
+  - 変更が必要になった箇所だけ引数を変更すれば良い
 - テストが大きくなってきても、テストケースの中を見るだけでどのようなテストが行われているかがわかる
+  - 今回の例だと `makeAwsServiceNameValidator` がどのような初期化を行っているかが一目でわかる
+  - `beforeEach` を使った状態の共有よりメンテナンスがしやすい
 
 このテクニックや考え方は以下の書籍で作者の `Roy Osherove` さんが提唱されていました。
 
@@ -268,11 +275,11 @@ https://learn.microsoft.com/en-us/dotnet/core/testing/unit-testing-best-practice
 
 ## 逆にセットアップ関数などを使っても良いのでは？という場合
 
-**DBなどの外部の依存の状態に左右される場合** が主に該当すると思います。
+**DBなどの外部の依存の状態に嫌でも左右される場合** が主に該当すると思います。
 
-一般的なWebシステムにおいては「DBを取り扱うクラス（モデルやリポジトリ）」があったり、DBに依存するようなテストを書くことがあります。
+一般的なWebシステムにおいては「DBを取り扱うクラス（モデルやリポジトリ）」があったり、DBの状態に依存するようなテストを書くことがあります。
 
-すべてをフェイク（モック、スタブ）を駆使してユニットテストで書くよりも、コンテナ仮想化技術などで立ち上げたDBを使って、よりアプリの信頼度を高めたテストも書きますよね。（これはユニットテストというよりも統合テストにあたるのかもしれませんが）
+フェイク（モック、スタブ）を駆使してユニットテストで書くよりも、コンテナ仮想化技術などで立ち上げたDBを使って、よりアプリの信頼度を高めたテストも書きますよね。（これはユニットテストというよりも統合テストにあたるのかもしれませんが）
 
 そのような場合、以下のような前処理・後処理のために `beforeEach` や `afterEach` を使うのも良いと思います。
 
@@ -303,23 +310,28 @@ describe("createBlogPost", () => {
 })
 ```
 
-今回はわかりやすい関数を使っていますが、実際のテストでは「DBのトランザクションを使って、いい感じにロールバックする」といった処理を行うことがあると思います。
+DBが絡むテストであれば「他のテストケースに影響を及ぼさないように、逆に後処理でクリーンな状態に戻す」などの処理を行うのは一般的にあると思います。（むしろ状態を引きまわさないように帳尻を合わせる）
 
 https://dev.classmethod.jp/articles/prisma-jest-isolated-transaction/
 
-このように「どうやってもテストケース間で共有する必要のある外部の依存」については、セットアップ関数などを利用するのも良いかもしれません。
+このように「どうやってもテストケース間で共有する必要のある外部の依存」については、セットアップ関数などを利用するのも良いと思います。
 
 とはいえ、極力ユニットテストをしやすくなるように直接DBをやORMと関わるのは一部の関数やクラスだけにして、ビジネスロジックとDBの都合との分離は意識したいところですね。（DBにかかわらず、外部への依存を極力減らすことがテストしやすいコードになると思います）
 
 ## まとめ
 
-- `beforeEach` などのセットアップ関数の利用には注意が必要
-  - テストケース間で思わず状態を共有してしまう可能性があるなど
-- そんなときにはヘルパー関数を用意してみると良いかも
-  - 参考書籍: https://www.manning.com/books/the-art-of-unit-testing-third-edition
-- ただしDBなどが絡む統合テストの場合にはむしろセットアップ関数を使っても良いかもしれません
+- `beforeEach`などのセットアップ関数の利用には注意が必要です。テストケース間で状態を共有してしまうリスクがあります
+- 状態を共有せずに済むよう、ヘルパー関数を使用する方法があります。テストケースの可読性向上、メンテナンス性向上に繋がると思います
+- ただし、DBなどが絡む統合テストの場合にはセットアップ関数などが有効だと思われます。むしろ、テストケース間の状態を共有しないようにクリーンな状態に戻す処理を行うためです
 
-以上、ユニットテストについて細かい話をしてみました。今後もテストに関する記事を書いてきたいと思います。
+[The Art of Unit Testing](https://www.manning.com/books/the-art-of-unit-testing-third-edition)はとてもおすすめの書籍ですが、時間がない方は[Microsoftのユニットテストベストプラクティス](https://learn.microsoft.com/en-us/dotnet/core/testing/unit-testing-best-practices)などをみるだけでも作者の考え方に触れられると思います。
 
 最後まで読んでいただき、ありがとうございました！
 
+## 超余談
+
+今回のように「AWSのサービス名を間違えたくないよ」という時のためにtextlintというツールのプラグインを作っています。
+
+ご興味のある方は以下のリポジトリを見てみてください。
+
+https://github.com/bun913/textlint-rule-aws-service-name
