chore: add tags

--- a/articles/0aeef3e7347793.md
+++ b/articles/0aeef3e7347793.md
@@ -2,7 +2,7 @@
 title: "ユニットテストでbeforeEachなどのセットアップを使う際の注意点と改善例"
 emoji: "📝"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["test", "unittest"]
+topics: ["test", "unittest", "jest","vitest"]
 published: true
 ---
 
