--- a/articles/e4b3a5458e0055.md
+++ b/articles/e4b3a5458e0055.md
@@ -2,7 +2,7 @@
 title: "継続した開発のために: ユニットテストの定義を考える"
 emoji: "📑"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["unittest"]
+topics: ["unittest", "test"]
 published: true
 ---
 
