fix: コメントを追加

--- a/articles/ff904546260b6c.md
+++ b/articles/ff904546260b6c.md
@@ -299,6 +299,7 @@ def solve():
 def act():
     N, M = map(int, input().split())
     A = list(map(int, input().split()))
+    # 筆者追記: 隣接リストという形式でグラフの情報を作っています
     G = [[] for _ in range(N)]
     for _ in range(M):
         a, b, c = map(int, input().split())
@@ -309,12 +310,14 @@ def act():
     dist = [INF] * N
     dist[0] = A[0]
     # heapqには(重み, 頂点)を入れる
+    # 筆者追記: ノード（頂点）自体に重みがあるので、頂点1への最小の重みを頂点1自体の重みとして設定しています
     q = [(A[0], 0)]
     while q:
         cur_dist, u = heapq.heappop(q)
         if cur_dist > dist[u]:
             continue
         for v, w in G[u]:
+            # 筆者追記: ノード（頂点）自体の重みと辺の重みを足して、頂点vへの最小の重みを求めています
             path_omomi = cur_dist + w + A[v]
             if path_omomi < dist[v]:
                 dist[v] = path_omomi
