--- a/articles/3eadb58169f235.md
+++ b/articles/3eadb58169f235.md
@@ -134,7 +134,7 @@ export class ManuallyManagedResourceStack extends cdk.Stack {
 
 ### AWS CDK による Lambda + API Gateway の構築
 
-今回のインフラ構成の基盤となるLambda + API Gateway の構築は以下のようになります。（長いので折りたたんでいます）
+今回のインフラ構成のメインとなるLambda + API Gateway の構築は以下のようになります。（長いので折りたたんでいます）
 
 :::details Lambda + API Gateway の構築
 
