--- a/articles/2bb1a314d04063.md
+++ b/articles/2bb1a314d04063.md
@@ -365,7 +365,7 @@ export const getParameter = async (path: string): Promise<string> => {
 
 https://github.com/bun913/singi-bot/blob/main/lambda/lambda.ts
 
-全体の流れは[[Slack][AWSサーバレス]Slackワークスペースへの読み取り権限がほぼゼロのChatGPTボットを作る](https://dev.classmethod.jp/articles/slack-chat-gpt-bot/)と同じで以下のようになっています。
+全体の流れは[[Slack][AWSサーバレス]Slackワークスペースへの読み取り権限がほぼゼロのChatGPTボットを作る](https://dev.classmethod.jp/articles/slack-chat-gpt-bot/)とほとんど同じで以下のようになっています。
 
 - Slackからのリクエストを受け取る
 - 一旦とりあえず審議マンから「しばし待たれよ」的なメッセージを返却（意図は以下のとおりです）
