chore: fix title

--- a/articles/f0919f5b6549cc.md
+++ b/articles/f0919f5b6549cc.md
@@ -1,5 +1,5 @@
 ---
-title: "何をもとに二分探索するかという発想の転換がいい【AtCoder Beginner Contest 364 振り返り（茶）】"
+title: "何をもとに二分探索するかという発想の転換が面白い【AtCoder Beginner Contest 364 振り返り（茶）】"
 emoji: "🍰"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["AtCoder", "Python"]
