chore: 表現を修正

--- a/articles/c013d56a793a61.md
+++ b/articles/c013d56a793a61.md
@@ -40,7 +40,7 @@ https://www.shoeisha.co.jp/book/detail/9784798172354
 ![TestPurposeTable](/images/e2e_automation_book/testTable.png)
 *[テストを自動化するのをやめ、自動テストを作ろう](https://speakerdeck.com/tsuemura/tesutowozi-dong-hua-surufalsewoyame-zi-dong-tesutowozuo-rou?slide=30) より引用*
 
-- 例えば機能的に受け入れ基準を満たしているか、といった観点での保証的なテストは自動化に適している
+- 例えば機能的に受け入れ基準を満たしているか、といった観点での保証的かつ手順がはっきりとしているテストは自動化に適している
 - 一方でユーザビリティのテストなども含む探索的なテストは無理に自動化を目指すのではなく、依然として経験を持つ人が効率的に行うといった考えができるのかな。と受け取りました。
 
 ## 第2章 開発を支える自動テスト
