--- a/articles/c013d56a793a61.md
+++ b/articles/c013d56a793a61.md
@@ -4,6 +4,7 @@ emoji: "📕"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["test","codeceptjs","e2e"]
 published: true
+publication_name: "moneyforward"
 ---
 
 こんにちは。ダイの大冒険ガチ勢の[bun913](https://x.com/bun76235104)と申します。
