fix: add lt material to beforeEach article

--- a/articles/0aeef3e7347793.md
+++ b/articles/0aeef3e7347793.md
@@ -23,6 +23,12 @@ published: true
 - それに対する改善提案
 - 逆に `beforeEach` を使っても良いかなぁ。と思うケースについて
 
+## 追記 2024/08/20
+
+本記事の内容をもとに以下でLTをさせていただきました。
+
+@[speakerdeck](de77f0e9a94742aaa2e15406534948ee)
+
 ## サンプルコード
 
 みなさんAWSは使ったことがありますか？
