--- a/articles/5452d526d695d0.md
+++ b/articles/5452d526d695d0.md
@@ -128,7 +128,7 @@ https://github.com/billylam/newman-reporter-testrail
 
 オリジナルのライブラリは非常に素晴らしいのですが、残念ながらテストコードは動かず「挙動を変更せずに」を確かめることができない状態でした。
 
-そのため、たとえば以下のようにテストコードをBDD形式で実装して、一つ一つ挙動を確かめいきました。
+そのため、たとえば以下のようにテストコードをBDD形式で実装して、一つ一つ挙動を確かめていきました。
 
 ```
 ✓ test/TestrailReporter.spec.js (12)
