fix: boundary value

--- a/articles/c8b82d848b0416.md
+++ b/articles/c8b82d848b0416.md
@@ -78,7 +78,7 @@ jobs:
       },
       "user_input": "params[:json]",
       "confidence": "High",
-      // ↓5文字以下なのでエラーになります
+      // ↓5文字未満なのでエラーになります
       "note": ""
     },
     {
@@ -99,7 +99,7 @@ jobs:
       },
       "user_input": "params[:json]",
       "confidence": "High",
-      // 5文字以下なのでエラーになります
+      // 5文字未満なのでエラーになります
       "note": "a"
     },
     {
