--- a/articles/806475facd2490.md
+++ b/articles/806475facd2490.md
@@ -1,5 +1,5 @@
 ---
-title: "コンプレックスを力に英語学習を進めるんだぁ"
+title: "コンプレックスをさっと炒めて英語を学習しています"
 emoji: "📝"
 type: "idea" # tech: 技術記事 / idea: アイデア
 topics: ["学習法"]
@@ -24,48 +24,49 @@ published_at: 2024-12-15 09:00
 
 ## 3行まとめ
 
-- 学習を要する問題に直面した時に、自分の（負の）気持ちを言語化してみる
-- 最も効率の良い方法よりも、その気持ちを大事にした学習方法を考えてあげる
-- 使用教材は関一生さんの書籍にどハマりしている
+- 学習を要する問題に直面した時に、自分の（負の）気持ちを言語化する
+- 定着率の最高効率ではなく、自分の気持ちが持続しやすい（であろう）学習方法を考える
+- 効果を感じられている具体的な英語学習教材についてご紹介します
 
 ## 1. 気持ちに気づいて、できるだけ寄り添ってあげる作業
 
 私は問題が外の環境起因で、解決に自分の学習を伴う問題である場合は「どんな気持ちか？ワクワクしてる？何か嫌な気分？」、「どのコンプレックスを刺激されてるのかな？」といった気持ちの部分を言語化してあげています。
 
-というのも、なりたい姿の裏側には前向きだろうが後ろ向きだろうが、何かしら強めの感情があるため、そこに沿った学習をすることで、長く学習を続けやすいからです。
+馴染みのない分野や昔に勉強していた分野だと、習慣化には多少なりとも心理的にストレスがかかることが多いです。どんな分野でも1ヶ月もやると習慣化することが多いのですが、1ヶ月間を挫折なく続けるために、モヤモヤを全て吐き出しておきたいです。ここで整理しておけばモチベーション維持が長く繋がりますが、逆にモヤモヤしながら学習を続けるのは少し辛いためです。
 
 私が今直面している課題といえば、英語学習です。マネーフォワードでは英語によるコミュニケーションを推進しており、私もそれを承知の上で2024年7月に入社しました。
 以下の@bondeeさんという同僚の記事を読むと、日本語を母国語にしないメンバー（以下グローバルメンバー）を真剣にサポートしている姿勢が伝わってきます。
 
 https://note.com/kim_dongjin/n/n410b1908a3ee
 
-ただ、実際に入社してみると周りのチームメンバーと私の英語力の差は歴然であり、**英語が全然できないから学習をしないと**という強めの問題に直面しました。
+入社時点でTOEIC(L&R)のスコアだけで言うと700点前後であり、ちょっと頑張れば何とかなると思っていましたが、実際に入社してみると周りのチームメンバーと私の英語力の差は歴然であり、**英語学習をしないと**という強めの課題を感じるようになりました。
+
+なお、昨日のアドベントカレンダーでも同様の課題を感じている同僚がいて元気になりました。（[自称マッチョなエンジニアの2024年振り返り｜Mory](https://note.com/muscle_mory/n/nffbd298dd73e)
 
 ### 1.1. 問題の背景にある「〜なのに」を見つける
 
-さて、私の気持ちの部分と事実を分けて考える時に、大抵の場合は「〜なのに」「〜だというのに」という感情が隠れていることが多いです。
+さて、私が「モヤモヤ」する大抵の場合は「〜なのに」「〜だというのに」という感情が隠れていることが多いです。
 
 今回の英語学習の場合、以下のようなコンプレックスがすぐに見つかりました。
 
-- （周りのチームメンバーは英語ペラペラなのに）私は英語が全然できない
-- （年齢も若く、入社歴の浅い人でも英語がペラペラなのに）私は英語が全然できない
+- （入社直後という一番生産性もない時期なのに、その上）英語でコミュニケーションが取れない
+- （周りのチームメンバーは英語ペラペラなのに）私は英語が苦手
 
-私は元々の性格に加えて、5年前までIT技術とは全く関係のない公務員時代を過ごしているため、若さや時間に対する焦りのようなものが人よりあると感じています。（それでも前に比べればだいぶマシになりましたが）
+私は元々の性格に加えて、6年ほど前までIT技術とは全く関係のない公務員時代を過ごしているためか、時間に対する焦りを感じやすい傾向にあります。（以前よりはかなり改善されています）
 
-### 1.2. 過去に同じ気持ちに直面した時のことを思い出す
+### 1.2. 紙に書き出しながら整理する
 
-私を嫌な気持ちにさせている **〜なのに** が見つかったので、過去にも同じような気持ちに直面した時のことを思い出してみます。
+私を嫌な気持ちにさせている **〜なのに** が見つかったので、過去に以下の記事でご紹介した方法でありのままの気持ちを整理してみます。
 
-過去に同じ気持ちになったけど、今は平気（忘れてた）であれば同じアプローチが使えるかもしれません。
+https://dev.classmethod.jp/articles/zerosec_thinking_method/
 
-今回の例で言えば、以前も同じような **~なのに** に直面して、気持ちを言語化して対応した経験を思い出しながら整理していきます。
+:::details 私の心理描写が長いため折りたたんでいます。体に悪くないようにコンプレックスに火を入れて形を変えています
 
-- （周りのチームメンバーは技術がすごいのに）私は技術が全然できない
-  - 周りと比べて嫌な気持ちになって、紙に書いて整理してたなぁ（興味があれば[周りのすごい人と比較してしまう時などに良かった思考の整理法を紹介します | DevelopersIO](https://dev.classmethod.jp/articles/zerosec_thinking_method/)を参照してください）
-  - 結局年齢というよりも、俺が周りの人をすごいと思うのは「なにか積み重ねてきたもの」を見て尊敬することが多いんだった
-  - 今回でいえば、みんな学生時代に英語を学んだり、受験の時に積み重ねてきた人たちなんだろうなぁ
+- そういえば以前「周りと比べて何も技術力がない」と感じてたときがあったなぁ
+  - あの時は「じゃあ周りの人をなぜすごいと思うのか」ということを言語化してみたらスッキリした
+  - 英語のことだけに関しても、留学経験がない人でも学生時代に相当英語を勉強している人がいると聞いたなぁ
   - そういえば、俺高校時代にまともに英文法とか長文を体系的に勉強してなかったなぁ
-  - じゃあ英語できなくて当然だ！頑張ってる人に対して才能とか年齢とか考えるの失礼だぞ！
+  - じゃあ英語ができないと感じても当然だ！頑張ってる人に対して才能とか年齢とか考える時点で失礼やぞ
 
 という感じで整理できたら、「英語ができない」と感じている気持ちをもう少し言語化してみます。
 
@@ -73,18 +74,26 @@ https://note.com/kim_dongjin/n/n410b1908a3ee
   - 書く・読むはツールを使えばなんとかなる（こともある）
   - 聞くのも実は「どんなことを話しているか」くらいまでならわかることが結構ある
   - だけど、自分の言葉がでてこない
-  - つまり「話せない」が感じている中でいちばんの課題なんだな
-- では、少しでも話せるようになるためにはどういう風に学習していけば良いのかな？
-  - ある程度話せるようになった後で、ちゃんと体系的な学習をしたいな
-  - 本当は体系的な学習の後に、話す練習をした方が良さそうだけど、最初にある程度のラインで話せるようにならないと、みんなにも迷惑がかかってしまうし
-  - スピーキングをある程度のレベルまで持って行ってから、体系的に学習するようにしてみたいな
-  - その間多分技術の勉強の時間減ると思うけど、その後は英語のコンテンツも読めるようになってブーストするからセーフセーフ。知らんけど。
+  - 「話せない」ことが、やっぱり一番強い課題感だな
+- じゃあ、少しでも話せるようになるためにはどういう風に学習していけば良いのかな？
+  - まずは日常の会話や冗談を軽く言えるようになって、俺の性格も伝えていきたいな
+  - それができるようになったら、「体系的に勉強もやったから、あとは実践で鍛えるぞ」というメンタルになりたい
+  - 本当は体系的な学習の後に、話す練習をした方が良さそうだけど、最初にある程度のラインで話せるようにならないと、みんなにも迷惑がかかってしまうだろうし
+- 英語頑張るのはいいけど、技術の勉強もたくさんしたいなぁ
+  - 自然言語の習得は時間がかかるっていうしなぁ
+  - さっき整理したみたいに、最初にある程度体系的に学ぶ時間は必要だと思う
+  - 読解能力がついたら、技術の英語コンテンツも読めるようになるし、その時にブーストするのもありかもしれない
+  - ほな、ええかぁ
 
 などというように、自分では（もう）コントロールできない問題に整理をつけながら、比較的未来志向の気持ちを見つけてあげることができました。
 
+まさにコンプレックスをそのままに学習を駆動させるのではなく、体に悪くないように加工してあげるイメージです。やっぱり塩分の摂りすぎは控えた方がいいですよね。
+
+:::
+
 ## 2. 全体の学習分野を把握して、学習の順序をなんとなく考える
 
-やっと気持ちを言語化できたので、「ある程度話せるようにならないと」という気持ちを大事にしてあげます。
+やっと気持ちを言語化できたので、「まずはある程度話せるようにならないと」という気持ちを大事にしてあげます。
 
 書店に並んでいる参考書や学習法の書籍を自分の目で確認し、ある程度分野を分けて学習できることを把握します。スピーキングは「相手の言うことを聞けて」「自分の考えを瞬間的に英語で言える」ことなので、とても複合的なスキルなのだろうと感じました。
 
@@ -103,7 +112,7 @@ https://note.com/kim_dongjin/n/n410b1908a3ee
 
 しかし、私は「ある程度でいいからまずは話せるようになりたい」という意思が強いので、まずはスピーキングの分野で小さな成功体験を積ませてあげたいです。
 
-そこで、以下のような手順で自習を進めていくことにしました。（後に会社の研修の進捗順とも矛盾しないことがわかりました）
+そこで、以下のような手順で自習を進めていくことにしました。（後に会社の研修の進捗順とも大きく矛盾しないことがわかりました）
 
 - （中学レベルの）英文法を瞬間英作文で馴染ませる
   - 簡単な英語をスパッと言えるようにしながら、英語の語順を覚える
@@ -130,11 +139,11 @@ https://note.com/kim_dongjin/n/n410b1908a3ee
 - [TOEIC(L&R)](https://www.iibc-global.org/toeic/test/lr.html)のスコア
   - 読む力と聞く力の指標にしています
   - ただし、この試験に特化した学習はしません
-  - ちなみに2022年ごろに受験した時のスコアは675点でしたが、これは中学レベルの英文法を覚えて単語を効率的に学習し、小手先の技術でスコアをとったという感じです
+  - ちなみに2022年ごろに受験した時のスコアは675点でしたが、これは中学レベルの英文法を覚えて単語を効率的に学習し、小手先の技術でスコアをとった感覚です
 - [PROGOS](https://progos.ai/)
   - 英語のスピーキングテストです
-  - モバイルアプリで毎日受験できますが、2週間に1回程度のペースで受験しています
-  - [評価の指標](https://progos.ai/cefr.html)
+  - モバイルアプリで毎日受験できます。2週間に1回程度のペースで受験しています
+  - 参考: [スコアの指標](https://progos.ai/cefr.html)
 
 | 項目                     | 2022年7月末時点 | 2024年11月末時点                    |
 | ------------------------ | ------------- | ----------------------------------- |
@@ -146,7 +155,7 @@ https://note.com/kim_dongjin/n/n410b1908a3ee
 
 - 日常会話がかなり通じるようになってきた
   - 最初は `I can play the piano` しか言えませんでした。
-  - 参照: [I can play the piano 以外の言葉がでてくるようになった英語学習。ピアノは弾けない ｜bun913](https://sizu.me/bun913/posts/xbddfdi55vxs)
+  - 以前書いた日記はこちらです: [I can play the piano 以外の言葉がでてくるようになった英語学習。ピアノは弾けない ｜bun913](https://sizu.me/bun913/posts/xbddfdi55vxs)
 - ゆっくりEnglishで会議で何を話しているか、大体わかるようになってきた
   - ただし、皆さんが本気の速さで話すとまだまだついていけません
   - まだ、技術的なトピックなどを自分の主体的な意見として話すのは難しいと感じています
@@ -166,6 +175,8 @@ https://note.com/kim_dongjin/n/n410b1908a3ee
 https://ibcpub.co.jp/detail/9784794607980/
 
 8月中旬時点で30周くらいしました。この時点でPROGOSはB1レベルを安定して取得できるようになりました。とっかかりの学習として、とても効果があったと感じています。
+
+英語の語順を何度も音読しながら体に馴染ませているような感覚でした。
 
 ### 2024.8中旬 ~ 10月 （英単語を例文で覚える）
 
@@ -229,8 +240,8 @@ https://www.kadokawa.co.jp/product/321604000262/
 
 - 学習を要する問題に直面した時に、自分の気持ちを言語化してみる
 - 言語化した上で、その気持ちを尊重した学習方法を考えてあげる
-- 関一生さんの書籍で体系的に学習するの楽しいぃぃ
-  - 体系的に学習するのは今後「英語力の維持」をするときに必要だと思うのでがんばります
+- 関一生さんの書籍で体系的に学習するのがとても楽しいです
+  - 体系的に学習するのは今後「英語力の維持」をするときにも活きてくると思うので、しっかりと学習していきたいです
 
 以上、長文をお読みいただきありがとうございました。めんどくさい性格をしている私の学習法が、少しでも誰かの学習法に役立てば幸いです。
 
