--- a/articles/806475facd2490.md
+++ b/articles/806475facd2490.md
@@ -66,7 +66,7 @@ https://dev.classmethod.jp/articles/zerosec_thinking_method/
   - あの時は「じゃあ周りの人をなぜすごいと思うのか」ということを言語化してみたらスッキリした
   - 英語のことだけに関しても、留学経験がない人でも学生時代に相当英語を勉強している人がいると聞いたなぁ
   - そういえば、俺高校時代にまともに英文法とか長文を体系的に勉強してなかったなぁ
-  - じゃあ英語ができないと感じても当然だ！頑張ってる人に対して才能とか年齢とか考える時点で失礼やぞ
+  - じゃあ英語ができないと感じても当然だし、心の中で自信がないのも当然かも
 
 という感じで整理できたら、「英語ができない」と感じている気持ちをもう少し言語化してみます。
 
