--- a/articles/806475facd2490.md
+++ b/articles/806475facd2490.md
@@ -112,7 +112,7 @@ https://dev.classmethod.jp/articles/zerosec_thinking_method/
 
 しかし、私は「ある程度でいいからまずは話せるようになりたい」という意思が強いので、まずはスピーキングの分野で小さな成功体験を積ませてあげたいです。
 
-そこで、以下のような手順で自習を進めていくことにしました。（後に会社の研修の進捗順とも大きく矛盾しないことがわかりました）
+そこで、以下のような手順で自習を進めていくことにしました。（他の人にとっても良い方法とは限りません）
 
 - （中学レベルの）英文法を瞬間英作文で馴染ませる
   - 簡単な英語をスパッと言えるようにしながら、英語の語順を覚える
