--- a/articles/ec75ccb17d3510.md
+++ b/articles/ec75ccb17d3510.md
@@ -1,5 +1,5 @@
 ---
-title: "事業継続を支える自動テストの考え方 #長崎QDG"
+title: "事業継続を支える自動テストの考え方 に対する速報感想 #長崎QDG"
 emoji: "📑"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["test"]
