feat: add siryo

--- a/articles/7312f2e9129f52.md
+++ b/articles/7312f2e9129f52.md
@@ -10,6 +10,10 @@ published: true
 
 少なくともこの記事発表時点では、発表資料の公表を確認できなかったのでもし公開を確認できたら、そちらへのリンクも貼りたいと思います。
 
+(追記) 資料を公開いただいたので、リンクを追記します！
+
+https://speakerdeck.com/ropqa/test-architecture-design-in-practice
+
 ## 「実践」という名のとおり、思ったよりソフトウェア設計よりの話が多い！すごい！
 
 私は長崎QDGというものに初めて参加するのですが、勝手に「どちらかというソフトウェアテスト技術」に関する内容やQAエンジニアの方向けのトピックが多いのかなと勝手に思っていたのですが、こちらのセッションはかなりソフトウェア設計に近い人に刺さる内容でした。
@@ -37,7 +41,7 @@ published: true
     - 例: https://logmi.jp/main/technology/330972
 - 取り組みの結果も数値もつけて示してくださいました
 
-というようにかなりロジカルかつ、組織課題にフィットしたテストアーキテクチャ設計の実践をされていると感じました。（ぜひ資料が見たい！同僚と議論をしたい！）
+というようにかなりロジカルかつ、組織課題にフィットしたテストアーキテクチャ設計の実践をされていると感じました。
 
 https://bookplus.nikkei.com/atcl/catalog/13/P85120/
 
