--- a/articles/806475facd2490.md
+++ b/articles/806475facd2490.md
@@ -204,7 +204,7 @@ https://www.icp-duo.jp/duo30
 
 スピーキングがある程度できるようになってきたため、今後の英語力が伸び悩みしないように、しっかりと体系的に理解を深めていきたいと思っています。
 
-何冊か本を読んでいるうちに、関一生さんの書籍が私にはとてもわかりやすかったので、書籍は関さんのもので統一するようにしています。関さんの書籍はわかりやすいだけでなく、色々な分野・レベルの書籍でも解説が統一されているのでとても助かります。
+何冊か本を読んでいるうちに、関正生さんの書籍が私にはとてもわかりやすかったので、書籍は関さんのもので統一するようにしています。関さんの書籍はわかりやすいだけでなく、色々な分野・レベルの書籍でも解説が統一されているのでとても助かります。
 
 以下の書籍は復習を込みで3周やりました
 
@@ -240,7 +240,7 @@ https://www.kadokawa.co.jp/product/321604000262/
 
 - 学習を要する問題に直面した時に、自分の気持ちを言語化してみる
 - 言語化した上で、その気持ちを尊重した学習方法を考えてあげる
-- 関一生さんの書籍で体系的に学習するのがとても楽しいです
+- 関正生さんの書籍で体系的に学習するのがとても楽しいです
   - 体系的に学習するのは今後「英語力の維持」をするときにも活きてくると思うので、しっかりと学習していきたいです
 
 以上、長文をお読みいただきありがとうございました。めんどくさい性格をしている私の学習法が、少しでも誰かの学習法に役立てば幸いです。
