--- a/articles/e12037a09f436c.md
+++ b/articles/e12037a09f436c.md
@@ -17,7 +17,7 @@ publication_name: "moneyforward"
 - シンプルなマークダウンファイルでタスクを管理して、あとで参照できるようにしておきたい
 - gitで管理できるとなお良い
 
-AIの進歩が著しい今の時代においても、あまり要領がよくない私にとって「今は何をしている」「この差し込みタスクは後回し！」と整理をつけることは結構重要です。
+AIの進歩が著しい今の時代。それでも、あまり要領がよくない私にとって「今何に集中すべきか」「この差し込みタスクは後回しにしよう」と整理をつけることは、相変わらず重要なスキルだと感じています。
 
 今回は私がnvimを使って、実践しはじめたタスク管理の方法について説明しています。誰かの参考になれば幸いです。
 
@@ -31,6 +31,7 @@ AIの進歩が著しい今の時代においても、あまり要領がよくな
   - nvim version: 0.10.2
 
 ## いきなりデモ
+まずは実際の使用例を見ていただくのが早いと思います。私の場合、以下のような形でタスクを管理しています。
 
 ### タスクの仕分け
 
@@ -156,7 +157,7 @@ https://github.com/nvim-telescope/telescope.nvim
 
 ## 実現しているコード
 
-以下のようなコードで実演したコマンドを定義しています。まだ正規表現が甘い部分がありますし、生成されるファイルの内容は私が使うのに必要十分な内容になっていますので、好きにカスタマイズしていただければと思います。
+以下のようなLuaコードで実演したコマンドを定義しています。正規表現のパターンマッチングはまだ改善の余地がありますが...
 
 ```
 vim.api.nvim_create_user_command('ConvertTask', function()
@@ -314,11 +315,10 @@ https://www.sanctuarybooks.jp/book/detail/1152
   - 自分だけのメモで良い場合はローカルに留めておく
 - タスクは一つだけに集中する。割り込みがあった場合は、優先度を判断してメモ帳に書き留めておく。マルチタスクは極力避ける
 
-とはいえ、ノートの代わりにSlackのスレッドに細かい作業や悩みを書き出しておくこともあります。例えば障害対応などは個人的にメモを残している場合ではないし、ふさわしくないと思います。私は個人として集中したり、考えを深める必要があることだけに使っています。（個人的な教訓や反省を残していたりなど）
+とはいえ、ノートの代わりにSlackのスレッドに細かい作業や悩みを書き出しておくこともあります。例えば障害対応などは個人的にメモを残している場合ではないし、ふさわしくないと思います。私は個人として集中したり、考えを深める必要があることだけに使っています。（個人的な教訓や反省を残していたりなどにも）
 
-### タスク管理TIPS
-
-ここまで紹介しているタスク管理と合わせて使うとよかった方法をまとめておきます。
+### その他タスク管理TIPS
+以下のテクニックは、上記のタスク管理と組み合わせることで、より効果的な作業管理を実現できます：
 
 - ポモドーロテクニック
   - 非常に簡単にいうと、25分の間に一つだけの作業に集中するものです
@@ -340,6 +340,6 @@ https://www.sanctuarybooks.jp/book/detail/1152
 - 1つだけのタスクに集中する、終わった小さな仕事は意識から消し去るが記録には残す、大きめの問題は別のファイルに切り出す。といった方法を実現できるようにカスタムコマンドを定義しています
 - チームで細かいステップを共有した方が良い問題や、段階の場合はSlackなどのチャットツールを使うなど、使い分けています
 
-以上、私個人のタスク管理の方法について記載しました。タスク管理に関しては、みなさん自分なりの方法を持っていると思いますので、ぜひ色々な方法を発信して見せていただきたいですね。
+以上、nvimをベースにした私なりのタスク管理の方法について記載しました。完璧な方法ではありませんが、日々改善を重ねながら運用している一例として参考にしていただければ幸いです。
 
 以上、長い文章を読んでいただきありがとうございました。
