chore: fix match pattern

--- a/articles/e12037a09f436c.md
+++ b/articles/e12037a09f436c.md
@@ -165,7 +165,7 @@ vim.api.nvim_create_user_command('ConvertTask', function()
   local line = vim.api.nvim_get_current_line()
 
   -- タスクのタイトルを抽出
-  local task_title = line:match '%- %[[ xxl]%] (.+)'
+  local task_title = line:match '%- %[[ x]%] (.+)'
   if not task_title then
     print 'No valid task found on the current line.'
     return
