chore: misc update

--- a/articles/e12037a09f436c.md
+++ b/articles/e12037a09f436c.md
@@ -1,5 +1,5 @@
 ---
-title: "要領がよくない自分のためのnvimタスク管理術"
+title: "要領がよくない自分のためのタスク管理術 with neovim"
 emoji: "📝"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["neovim"]
@@ -81,6 +81,13 @@ AIの進歩が著しい今の時代。それでも、あまり要領がよくな
 
 今回指定したファイル名で `./tasks/nvimTaskManagementArticle.md` という形で以下のようにタスクが切り出されますので、こちらに細かい懸念やタスクは書き出していくことで `main.md` がメモで大きくなることを防ぎます。
 
+```
+.
+├── main.md
+└── tasks #ここに進行中のタスクファイルが入ります
+    └── nvimTaskManagementArticle.md
+```
+
 ```md:tasks/nvimTaskManagementArticle.md
 # Nvimのタスク管理をZennに書く
 
@@ -137,9 +144,19 @@ AIの進歩が著しい今の時代。それでも、あまり要領がよくな
 
 ![ArchiveTask2](/images/nvimTaskManagement/demo4.gif)
 
-大きめのタスクの場合、あえて`main.md`からは消さないようにしています。ですが、すでにアーカイブ用のディレクトリに移動済みであるため、不要になったらシンプルにこの行を消すだけで十分です。
+```
+.
+├── archives #ここに個別タスクをアーカイブします
+│   └── 20250312
+│       ├── misc.md #別ファイルに切り出さなかった小さいタスクはここに完了を記録します
+│       └── nvimTaskManagementArticle.md # 個別のタスクは別のmdファイルで保管します
+├── main.md
+└── tasks
+```
 
-### 雑に後から検索する
+大きめのタスクの場合、あえて`main.md`からタスクの行は消さないようにしています。ですが、すでにアーカイブ用のディレクトリに移動済みであるため、不要であればシンプルにこの行を消すだけで十分です。
+
+### 後から検索する
 
 私は telescope.nvim というツールでいくつかの方法でテキスト検索をできるようにしています。
 
