chore: add lua syntax

--- a/articles/e12037a09f436c.md
+++ b/articles/e12037a09f436c.md
@@ -176,7 +176,7 @@ https://github.com/nvim-telescope/telescope.nvim
 
 以下のようなLuaコードで実演したコマンドを定義しています。正規表現のパターンマッチングはまだ改善の余地がありますが...
 
-```
+```lua
 vim.api.nvim_create_user_command('ConvertTask', function()
   -- 現在の行を取得
   local line = vim.api.nvim_get_current_line()
