chore: change type

--- a/articles/82661626d917ec.md
+++ b/articles/82661626d917ec.md
@@ -1,7 +1,7 @@
 ---
 title: "ウッキウキでnpmパッケージを公開しようとしたら403エラーが出ました（うっかり編）"
 emoji: "📝"
-type: "idea" # tech: 技術記事 / idea: アイデア
+type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["npm"]
 published: true
 publication_name: "moneyforward"
