--- a/articles/82661626d917ec.md
+++ b/articles/82661626d917ec.md
@@ -68,7 +68,7 @@ https://www.npmjs.com/package/playwright-testrail-reporter?activeTab=readme
 ### 次回への教訓
 
 - 何かのツールを作る前に同様のツールがないかよく確認する必要がありますね
-    - 私は `testrail plawyright` という検索ワードでそのパッケージを見つけることができず、`playwright testrail reporter` という検索ワードを使えばよかったことに後で気づきました
+    - 私は `testrail playwright` という検索ワードでそのパッケージを見つけることができず、`playwright testrail reporter` という検索ワードを使えばよかったことに後で気づきました
 - ただし、私のパッケージと既存のパッケージはパラメーターの受け渡し方からして思想の違いがあり、全く同じものを作っているわけではありません
      - そのため作ったものは `@bun913/playwright-testrail-reporter` という名前で公開しました
 
