--- a/articles/82661626d917ec.md
+++ b/articles/82661626d917ec.md
@@ -20,7 +20,7 @@ publication_name: "moneyforward"
 私は今 [Playwright](https://playwright.dev/) というツールを使って、E2EテストやAPIテストの実践について学んでいます。
 
 また、その中で [TestRail](https://www.testrail.com/)というテストケースやテスト実行結果の管理を行うためのサービスに、Playwrightのテスト結果を送信することを考えました。
-テストを実行するだけではなく、TestRailに必要なテストケースを作成し、その結果を蓄積しようと考えました。
+テストを実行するだけではなく、TestRailに必要なテストケースを作成し、その結果を蓄積しようとしていたのです。
 
 そこで、 `TestRail playwright` という検索ワードで調べたところ、TestRailの公式ドキュメントにて [TestRail CLI](https://docs.testrail.techmatrix.jp/testrail/docs/801/test-automation/automation-frameworks/playwright/)を使って集計する方法が紹介されていました。
 
