feat: MCP chombo

--- a/articles/6c439bab3cb0f4.md
+++ b/articles/6c439bab3cb0f4.md
@@ -22,19 +22,20 @@ https://github.com/bun913/mcp-testrail
 非常に簡単にいうと、Claude Desktop や Cursor のようなツールから自然言語で TestRail に対して操作を実行します。
 
 今の時点で以下のような操作を公開しています。
+(4/6 追記: 別途記事にしますがMCPクライアント側のツール数の制限に引っかかっていたため、削減しました)
+
 
 | Category | Tools |
 |----------|-------|
 | **Projects** | `getProjects`, `getProject`, `addProject`, `updateProject`, `deleteProject` |
-| **Cases** | `getCase`, `getCases`, `addCase`, `updateCase`, `deleteCase`, `getCaseTypes`, `getCaseFields` |
-| **Sections** | `getSection`, `getSections`, `addSection`, `moveSection`, `updateSection`, `deleteSection`, `copyToSection`, `moveToSection`, `getCaseHistory` |
-| **Suites** | `getSuites`, `getSuite`, `addSuite`, `updateSuite`, `deleteSuite` |
-| **Runs** | `getRuns`, `getRun`, `addRun`, `updateRun`, `closeRun`, `deleteRun` |
-| **Shared Steps** | `getSharedStep`, `getSharedSteps`, `addSharedStep`, `updateSharedStep`, `deleteSharedStep` |
-| **Milestones** | `getMilestone`, `getMilestones`, `addMilestone`, `updateMilestone`, `deleteMilestone` |
-| **Plans** | `getPlans`, `getPlan`, `addPlan`, `addPlanEntry`, `updatePlan`, `updatePlanEntry`, `closePlan`, `deletePlan`, `deletePlanEntry` |
-| **Results** | `getResults`, `getResultsForCase`, `getResultsForRun` |
-| **Users** | `getUsers`, `getUser`, `getUserByEmail` |
+| **Suites** | `getSuites`, `getSuite`, `addSuite`, `updateSuite` |
+| **Cases** | `getCase`, `getCases`, `addCase`, `updateCase`, `deleteCase`, `getCaseTypes`, `getCaseFields`, `copyToSection`, `moveToSection`, `getCaseHistory`, `updateCases` |
+| **Sections** | `getSection`, `getSections`, `addSection`, `moveSection`, `updateSection`, `deleteSection` |
+| **Runs** | `getRuns`, `getRun`, `addRun`, `updateRun`, `closeRun` |
+| **Results** | `getResults`, `getResultsForCase`, `getResultsForRun`, `addResultForCase`, `addResultsForCases` |
+| **Plans** | `getPlans` |
+| **Milestones** | `getMilestones` |
+| **Shared Steps** | `getSharedSteps` |
 
 ### 期待していること
 
