--- a/articles/42283caa9f50c1.md
+++ b/articles/42283caa9f50c1.md
@@ -9,7 +9,7 @@ publication_name: "moneyforward"
 
 こんにちは。ダイの大冒険ガチ勢の[bun913](https://x.com/bun7623514)と申します。
 
-わたしはSDET（Software Development Engineer in Test）という職種で働いており、名前からするとテストの自動化などを中心にしていそうですが、実際は効果的なマニュアルテストという貢献をチームにするべく頼りになるQAエンジニアの先輩に師事し、マニュアルUIテストの計画・分析・実行を行っています。
+わたしはSDET（Software Development Engineer in Test）という職種で働いており、名前からするとテストの自動化などを中心にしていそうですが、実際は効果的なマニュアルテストという貢献をチームにするべく頼りになるQAエンジニアの先輩に師事し、マニュアルUIテストの計画・分析・実行も行っています。
 
 その中で、「探索的テスト」という形でテストを実行するのですが、これまで「かなり経験や知見に依存するテストなのでは？」「QAエンジニアとしての経験があまりない自分では難しいのでは」と感じているところがありましたので、[Explore It!](https://www.kinokuniya.co.jp/f/dsg-02-9781937785024)という洋書を読んで学習しました。
 
