--- a/articles/e42fa03847dcd1.md
+++ b/articles/e42fa03847dcd1.md
@@ -1,11 +1,13 @@
 ---
-title: "ゆるい習慣と工夫で1000時間を削減せよ!SDET（SET)の1人DevOpsタイム取り組み！"
+title: "ゆるい習慣と工夫で1000時間を削減せよ!SDET（SET)の1人DevOpsタイム！"
 emoji: "⏲️"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["javascript", "Postman", "Cursor"]
 published: true
 publication_name: "moneyforward"
 ---
+
+# ゆるい習慣と工夫で1000時間を削減せよ!SDET（SET）の1人DevOpsタイム取り組み！
 
 こんにちは。ダイの大冒険エンジョイ勢の[bun913](https://x.com/bun7623514)と申します。
 
@@ -27,121 +29,200 @@ https://hrmos.co/pages/moneyforward/jobs/2121455132004343828
 
 ### 「やってられないぜ」と「あったら楽そう」を消失させない
 
-- 昨今はObsidianやCursorなどを組み合わせたノート術が流行っていますよね
-- ただ、私の場合はvimなどでメモを取る方法を以前紹介していました
-  - https://zenn.dev/moneyforward/articles/e12037a09f436c
-- 最近はひまじんプログラマーでもツェッテルカステンというメモ術をわかりやすく紹介していました
-  - https://open.spotify.com/episode/4tFtKNw5hkXgSj9kxUDwcR
-- このようなメモ術を使うのも良いと思うのですが、私の場合はシンプルに以下のような情報を管理しています
-  - やるべきタスク
-  - 改善系のタネ
-    - 「やってられないぜ」と思ったこと
-    - 「これあったら楽になるんじゃない？」と思ったこと
-  - そして以下gifのように、別のファイルにマークダウンを作成して、「これをやろう」と思ったきっかけを参照できるようにし、最終的なアウトプットへのリンクなどを貼るように準備しています
-  - memo: ここにvimでのタスク管理のgifを貼る
-- これにより私はカイゼンの種を極力、忘れないようにしています
-- これが後の1人DevOpsタイムのカイゼンに繋がっていきます
+昨今はObsidianやCursorなどを組み合わせたノート術が流行っていますよね。 
+ただ、私の場合はvimなどでメモを取る方法を以前紹介していました。 
+https://zenn.dev/moneyforward/articles/e12037a09f436c
+
+最近はひまじんプログラマーでもツェッテルカステンというメモ術をわかりやすく紹介していました。 
+https://open.spotify.com/episode/4tFtKNw5hkXgSj9kxUDwcR
+
+このようなメモ術を使うのも良いと思うのですが、私の場合はシンプルに以下のような情報を管理しています。
+
+- やるべきタスク（普通に仕事）
+- 改善系のタネ
+  - 「やってられないぜ」と思ったこと
+  - 「これあったら楽になるんじゃない？」と思ったこと
+
+このデモは以前書いた記事と同じものになりますが、一つのマークダウンファイルに色々情報を書いてゴチャゴチャにせず、タスクごとにマークダウンファイルを分けて管理します。
+
+![vim_demo](/images/nvimTaskManagement/demo1.gif)
+
+分けられたファイルでは以下のようなテンプレートが使われています。
+
+```markdown
+# OKとかいう特定の文言が入っていたら全部のチェックボックスにチェックを入れてくれるJSが欲しい
+
+<!-- Obsidianのタグの形式でタグを作成しておくことで、後から移行しやすくしておきます。このタスクファイルを作成した時点ですぐに書きます。 -->
+#DevOps #TestData #JavaScript #Bookmarklet
+
+## Reference
+
+<!-- ここになんでそう思ったのか？や参考になる記事やIssueなどがあれば貼ります。このタスクファイルを作成した時点ですぐに書きます。 -->
+
+## Artifact
+
+<!-- 最終的に何かの形でアウトプットを出すため、そのURLを貼ります。タスクがおわったあとに記載します -->
+
+TODO: zennで書いたら記事貼る
+TODO: GitHubのPRはる
+
+```
+
+これにより私は改善の種を極力、忘れないようにしています。これが後の1人DevOpsタイムの改善に繋がっていきます。
 
 ### APIのコールを見る習慣
 
-memo
+この処理はどうなってるんだろ？と思った時だけ良いので、Chrome の DevToolsで Network タブを開いてAPIのコールを確認する習慣をつけています。1つの機能を実現するための複数のAPIコールを確認することで、自分の認識が広がります。
 
-- この処理はどうなってるんだろ？と思う時だけでもいいから Chrome の DevToolsで Network タブを開いてAPIのコールを確認する
-- 1つの機能を実現するための複数のAPIコールを確認することで、自分の認識が広がる
-  - 例えばアップロードの機能
-  - これまで見えていた世界はこう
-    - mermaidでサクッと サーバーとDBを書く
-  - そこでAPIコールをみていると以下のように3つのAPIコールがあるとこに気づく
-    - サーバーにAPIコールを行って、いろいろなアクセス情報っぽいものを取得している
-    - その後、先ほどのアクセス情報っぽいものを使ってアップロードを行っている（S3というストレージにアップロードしている）
-    - 最後にアップロードが完了したことをサーバーに通知している
-  - これらをおこなうことで、先ほどまで見えていた世界がこうなります
-    - mermaidでさくっと サーバーとDBとS3を書く
-- 理想的に言えば処理を行なっているサーバーのコードを読むのが一番ですが、内部的な実装を知らなくてもAPIのコールをみて、パラメーターや認証の方法を推測するだけでも、フロントエンドアプリがラップしてくれているAPIというインターフェースの外側の振る舞いを知ることができます
-- QAやSDETエンジニアがとっかかりやすく、かつUIテストの自動化よりも壊れにくく早く実装できるAPIテストの実装にも知見として役立つと思います
-- また、個人的には今度は「このS3っていうのはなんだろう」「これが単一障害になることあるのかな？」といった疑問が湧いてきて、さらに学びを深めることにも繋がります
+DevToolsの使い方については、以下の記事がわかりやすかったです。
+
+https://knowledge.sakura.ad.jp/27872/
+
+例えばファイルアップロードの機能について考えてみましょう。
+
+- ユーザーがファイルを選択して、アップロードができること
+- アップロードしたファイルはオペレーターによる審査画面で確認できること
+
+といった要求に対して、これまで見えていた世界はこうでした。
+
+```mermaid
+graph LR
+    User(ユーザー) --> |アップロード| Frontend(フロントエンド)
+    Frontend --> |データ保存| Server(サーバー)
+    Server --> |保存| Database[(データベース)]
+```
+
+そこでAPIコールをみていると以下のように3つのAPIコールがあることに気づきます。
+
+1. フロントエンドアプリがサーバーにAPIコールを行い、何かへのアクセス情報っぽいものを取得しています。
+2. 先ほどのアクセス情報っぽいものを使ってアップロードを行っています。URLを渡してAIに聞いてみると、S3というAWSのストレージサービスにアップロードしていることがわかります
+   1. また、アクセス情報っぽいものは一時的にしか使えないセキュアなアクセスに必要な情報だということがわかります
+3. 最後にアップロードが完了したことをサーバーに通知しています。
+
+
+これらの仕組みがわかると、先ほどまで見えていた世界がこうなります。
+
+```mermaid
+sequenceDiagram
+    participant User as ユーザー
+    participant Frontend as フロントエンド
+    participant Server as サーバー
+    participant S3 as S3ストレージ
+    participant DB as データベース
+    
+    User->>Frontend: ファイルアップロード
+    Frontend->>Server: 1. アップロード準備リクエスト
+    Server->>Frontend: アクセス情報を返却
+    Frontend->>S3: 2. 取得したアクセス情報で直接アップロード
+    S3-->>Frontend: アップロード成功
+    Frontend->>Server: 3. アップロード完了通知
+    Server->>DB: メタデータ保存
+    Server-->>Frontend: 完了
+    Frontend-->>User: アップロード成功表示
+```
+
+理想的に言えば処理を行なっているサーバーのコードを読むのが一番ですが、内部的な実装を知らなくてもAPIのコールをみて、パラメーターや認証の方法を推測するだけでも、**フロントエンドアプリがラップしてくれているAPIというインターフェースの外側の振る舞いを知る**ことができます。
+
+今後のAPIテストの実装に繋がることはもちろん、個人的には今度は「このS3っていうのはなんだろう」「これが単一障害になることあるのかな？」といった疑問が湧いてきて、さらに学びを深めることにも繋がります。
 
 ### 1人DevOpsタイムを作る
 
-- さて、ここまでの習慣を続けると、自然とカイゼンの種が溜まっていきます
-- そこで、毎週1時間程度の時間を確保して、以下のようなことを行う時間を作ることをお勧めします
-  - 1人DevOpsタイム
-    - タスク化してある改善の種を実装する
-    - たんに「この技術に関する入門記事を読む」というものでも問題ありません
-    - どう考えても自分一人で時間が足りない場合は、別途仕事としてタスク化を検討しましょう
-  - 私の1人DevOpsタイムの目的は以下のものと割り切っています
-    - 最低: 昨日の自分と比べて少し知っている人、できる人が増えた人になっている
-    - できれば嬉しい: 自分の時間を10秒減らす
-    - 理想: 人の時間を10秒減らす。10秒を10人分、100回繰り返すなら160分以上の時間を削減。人数が多ければ1000時間かも
-  - 私が開発者としてのキャリアを決めるきっかけは「自分一人が楽になるツール」を作ったら、他に人の時間も削減できたという原体験があったからです
-  - 今回も、自分のモチベーションが極力上がりやすい形で、目標をゆるく設定しています
+さて、ここまでの習慣を続けると、自然と改善の種が溜まっていきます。そこで、毎週1時間程度だけでも時間を確保して、以下のようなことを行う時間を作っています。
+
+「1人DevOpsタイム」では、タスク化してある改善の種に着手します。必ずしも実装系のタスクである必要はなく、市のウルに「この技術に関する入門記事を読む」というものでも問題ありません。どう考えても自分一人ではできないことは、仕事化を検討します。
+
+私の1人DevOpsタイムの目的は以下のものと割り切っています。
+
+- 最低目標: 昨日の自分と比べて少し知っている人、できる人が増えた人になっていること。
+- 本当はここまでやりたい: 自分にとって本質的ではない時間を10秒減らすこと。
+- 理想: 他の人の時間を10秒減らす。10秒を10人分、100回繰り返すなら160分以上の時間を削減できます。人数が多ければ1000時間削減も。
+
+私が開発者としてのキャリアを決めるきっかけは「自分一人が楽になるツールを作ったら、他の人の時間も削減できた」という原体験があったからです。これらの目標の決め方も自分のモチベーションが極力上がりやすいように、ゆるく設定しています。
 
 ## 具体的な例1: テストデータを作るのが非常に面倒(Postmanによる改善)
 
-- 例えば、以下のステップをご覧ください
-- memo: 以下のステップをmermaidで書く
-  - 1. エンドユーザーによる申請
-  - 2. 運用側オペレーターによる審査・承認
-  - 3. エンドユーザーによる最後の操作
-    - ↑この操作をstyleで目立つように強調しておく
-- さて、この3の操作を行うためには当然1と2の操作を行う必要がありますが、この3の操作がユーザーごとに1度しか実行できない操作である場合どうでしょう？
-- 当然毎回テストデータを作成する必要があり手間ですよね
-- ユニットテストやUIを解さない形のテストでも実装したいところですが、実際の画面やユーザーセッションを介して挙動を確かめる必要はあると思います
-- そこで、Postmanを使ってAPIコールを確認しながら、データを作成する際のAPIコールをメモしておくことで、毎回手動でUIを介したデータ作成を行う必要があります
-- TODO: ここにPostmanのスクリーンショットを貼る
-- 当然Postman上では送信するパラメーターやヘッダーを変更することができるので、ユーザーごとに異なるデータを作成できます
-- シンプルにテストデータを作るだけでなく、ここでPostmanのコレクションを作成しておくことで、実際のAPIテストなどの実装にも役立ち一石二鳥です
-- また、UIテストの自動化を実装する際にも、必要データの事前作成などは必ずしもUIを介して行う必要はないので、テストデータ作成用のAPIコレクションがやくに立つことだと思います
+例えば、以下のステップをご覧ください。
+
+```mermaid
+graph LR
+    A[1. エンドユーザーによる申請] --> B[2. 運用側オペレーターによる審査・承認]
+    B --> C[3. エンドユーザーによる最後の操作]
+
+    style C fill:#f9f,stroke:#333,stroke-width:2px
+```
+
+さて、この3の操作を行うためには当然1と2の操作を行う必要がありますが、この3の操作がユーザーごとに1度しか実行できない操作である場合どうでしょう？
+
+当然毎回テストデータを作成する必要があり手間ですよね。ユニットテストやUIを解さない形のテストでも実装したいところですが、実際の画面やユーザーセッションを介して挙動を確かめる必要はあると思います。
+
+そこで、Postmanを使ってAPIコールを確認しながら、データを作成する際のAPIコールをメモしておくことで、毎回手動でUIを介したデータ作成を行う必要がなくなります。
+
+TODO: ここにPostmanのスクリーンショットを貼る
+
+当然Postman上では送信するパラメーターやヘッダーを変更することができるので、ユーザーごとに異なるデータを作成できます。シンプルにテストデータを作るだけでなく、ここでPostmanのコレクションを作成しておくことで、実際のAPIテストなどの実装にも役立ち一石二鳥です。また、UIテストの自動化を実装する際にも、必要データの事前作成などは必ずしもUIを介して行う必要はないので、テストデータ作成用のAPIコレクションが役に立つことでしょう。
 
 ## 具体的な例2: さくっとUIを操作したい（ブックマークレットの作成）
 
-- 先ほどはPostmanを使ったAPIコレクションの作成について紹介しましたが、そこまでしたくないけど・・・という場合もあると思います
-- 例えば、先ほどの例をもう一度見てみましょう
-- memo: さっきの3ステップのmermaidをはる
-  - ただし、3ではなく2の部分をstyleで目立つように強調しておく
-- さて、非常に極端な例ですが、この審査画面に非常に多くのチェック項目があるとどうでしょう？
-- 以下のようなチェックボックスを人間（将来的にはAIかもしれませんが）にすべてチェックしてもらう必要があるとします
-  - チェック1: 氏名が正しい
-  - チェック2: 住所が正しい
-  - チェック3: 電話番号が正しい
-  - チェック4: メールアドレスが正しい
-- このようにシンプルなチェックでも、項目が10個以上あると毎回手動でチェックするのは面倒ですよね
-- 以下はサンプルの画面です
-  - memo: ここにチェックボックスのサンプル画像を貼る
-- そこで、ブックマークレットを作成しておくことで、毎回手動でチェックする必要がなくなります
-- ブックマークレットでは、ブラウザ上の操作をJavaScriptで記述することで、特定の操作を自動化できます
-- 例えば、以下の例ではZennの記事を検索できるブックマークレットを作成しています
-- 以下のようなコードを書いて、ブックマークレットとして利用できる形で保存しておくことで、ブックマークをクリックするだけで、操作を自動化できます
-- ここにJavaScriptのコードを貼る
+先ほどはPostmanを使ったAPIコレクションの作成について紹介しましたが、そこまでしたくないけど・・・という場合もあると思います。
+
+例えば、先ほどの例をもう一度見てみましょう。
+
+```mermaid
+graph LR
+    A[1. エンドユーザーによる申請] --> B[2. 運用側オペレーターによる審査・承認]
+    B --> C[3. エンドユーザーによる最後の操作]
+
+    style B fill:#f9f,stroke:#333,stroke-width:2px
+```
+
+さて、非常に極端な例ですが、この審査画面に非常に多くのチェック項目があるとどうでしょう？以下のようなチェックボックスを人間（将来的にはAIかもしれませんが）にすべてチェックしてもらう必要があるとします。
+
+チェック1: 氏名が正しい、チェック2: 住所が正しい、チェック3: 電話番号が正しい、チェック4: メールアドレスが正しい…このようなシンプルなチェックでも、項目が10個以上あると毎回手動でチェックするのは面倒ですよね。
+
+以下はサンプルの画面です。
+
+TODO: ここにチェックボックスのサンプル画像を貼る
+
+そこで、ブックマークレットを作成しておくことで、毎回手動でチェックする必要がなくなります。ブックマークレットでは、ブラウザ上の操作をJavaScriptで記述することで、特定の操作を自動化できます。
+
+例えば、以下の例ではZennの記事を検索できるブックマークレットを作成しています。
+
+以下のようなコードを書いて、ブックマークレットとして利用できる形で保存しておくことで、ブックマークをクリックするだけで、操作を自動化できます。
+
+```javascript
+javascript:(function(){
+  const searchTerm = prompt('検索したい記事のキーワードを入力してください');
+  if (searchTerm) {
+    window.location.href = `https://zenn.dev/search?q=${encodeURIComponent(searchTerm)}`;
+  }
+})();
+```
 
 なんとなくお察しいただいていると思いますが、私はこのブックマークをAIに書いてもらっています。
 
 ### VSCodeやCursorに情報を与えてスクリプトを書いてもらう
 
-- [playwright-mcp](https://github.com/microsoft/playwright-mcp) と呼ばれるツールを使うことでVSCodeやCursorにチャットで指示を出して、ブラウザを実際に開いて操作してもらうことができます
-- ただし、それすらも面倒な場合HTMLの要素をChromeのDevToolsで調べて、以下のような情報をAIエージェントに渡すことで、スクリプトを書いてくれます
-- memo
-  - DevToolsのElementsタブを開いて、操作したい要素を右クリックして「Copy」→「Copy selector」を選択
-  - 画像を貼る
-- それをAIエージェントに渡して以下のような指示を出します
-  - memo: このように「OK」と書いてあるチェックボックスをすべてクリックするブックマークレットを作りたいです。まずはブラウザのDevToolsのConsoleタブに貼り付けて実行してみます。JavaScriptのコードを書いてください
-- それらをChromeのDevToolsのConsoleタブに貼り付けて実行することで、実際に操作を自動化できます
-- 後はtry and errorで、必要に応じてAIエージェントに指示を出して修正してもらいます
-- 意図通りの挙動になったら以下のような指示を与えて、ブックマークレット用のコードに変換してもらいます
-  - memo: このコードをブックマークレットとして使えるように変換してください。ブックマークレット用のコードはこのjsファイルのコメントとして出力してください
-- 後はブックマークを新しく作成して、保存するだけです
-- 自分だけで使う分にも良いですが、チームで使う場合にはブックマークの情報を共有するだけで、全員の20秒を削減できます
+[playwright-mcp](https://github.com/microsoft/playwright-mcp) と呼ばれるツールを使うことでVSCodeやCursorにチャットで指示を出して、ブラウザを実際に開いて操作してもらうことができます。
+
+ただし、それすらも面倒な場合HTMLの要素をChromeのDevToolsで調べて、以下のような情報をAIエージェントに渡すことで、スクリプトを書いてくれます。
+
+TODO: DevToolsのElementsタブを開いて、操作したい要素を右クリックして「Copy」→「Copy selector」を選択した画像を貼る
+
+それをAIエージェントに渡して以下のような指示を出します。
+
+「このように「OK」と書いてあるチェックボックスをすべてクリックするブックマークレットを作りたいです。まずはブラウザのDevToolsのConsoleタブに貼り付けて実行してみます。JavaScriptのコードを書いてください」
+
+それらをChromeのDevToolsのConsoleタブに貼り付けて実行することで、実際に操作を自動化できます。後はtry and errorで、必要に応じてAIエージェントに指示を出して修正してもらいます。
+
+意図通りの挙動になったら以下のような指示を与えて、ブックマークレット用のコードに変換してもらいます。
+
+「このコードをブックマークレットとして使えるように変換してください。ブックマークレット用のコードはこのjsファイルのコメントとして出力してください」
+
+後はブックマークを新しく作成して、保存するだけです。自分だけで使う分にも良いですが、チームで使う場合にはブックマークの情報を共有するだけで、全員の20秒を削減できます。
 
 ## さいごに
 
-- 今回は私が日々時間を削減するために行なっている習慣や工夫について紹介しました
-- ぶっちゃけ「そんなことをやっている暇がない」と思う方も多いと思います
-- それでも、日々のカイゼンの種を忘れないようにメモ化しておき、誰かに共有するだけでも誰か別の人が実現してくれるかもしれません
-- 大事なのは「これいいかも」と思ったことを日々の中で忘れて諦めないことだと思います
-- この記事が誰かにとって少しでも参考になれば幸いです。最後間でお読みいただきありがとうございました。
-- また、
+今回は私が日々時間を削減するために行なっている習慣や工夫について紹介しました。ぶっちゃけ「そんなことをやっている暇がない」と思う方も多いと思います。それでも、日々の改善の種を忘れないようにメモ化しておき、誰かに共有するだけでも誰か別の人が実現してくれるかもしれません。
 
+大事なのは「これいいかも」と思ったことを日々の中で忘れて諦めないことだと思います。この記事が誰かにとって少しでも参考になれば幸いです。最後までお読みいただきありがとうございました。
 
-本日[JaSST nano vol.47](https://jasst-nano.connpass.com/event/349312/)というイベントにて、私がSDET（Software Development Engineer in Test）という職種になってから感じていることについて赤裸々に発表しました。
-
-この内容について軽く触るとともに、せっかくなので今回からチャレンジしてみた[Marp](https://qiita.com/piyonakajima/items/1084e2f2ba765e855271)と生成AIを活用したスライド作成の体験が良かったので、それについて記事にしてみました。
